--- a/tm_modules/example/stuff/sidebar.css
+++ b/tm_modules/example/stuff/sidebar.css
@@ -1,3 +1,10 @@
 .sidebar {
     float: right;
+    border: 3px black solid;
+}
+
+.banner {
+    width: 100%;
+    border: 3px blue solid;
+    margin: 5px;
 }
